add_library(LibTree SHARED
LibTree.cpp 
PrintSpiral.cpp 
kdistance.cpp
Iterative_Preorder.cpp
PrintLeaf2Root.cpp
Lcs_General.cpp
Lcs_bst.cpp
sum_tree.cpp
tree2dll.cpp
vertical_print.cpp
PrintRoot2Leaf.cpp
leaftorootmaxsum.cpp
Leaf2Leafmaxsum.cpp
k_distance_from_root.cpp
height_of_a_node.cpp
boundary_traversal.cpp
k_distance_from_leaf.cpp
check_mirror.cpp
diameter.cpp
make_Threaded_Recursion.cpp
print_Threaded.cpp
Iterative_PostOrder.cpp
Closest_Leaf.cpp
Print_Ancestor.cpp
is_AVL_balanced.cpp
deepest_Leaf.cpp
root2leaf_particular_sum.cpp
diff_sum_alternate_level.cpp
)
