set(HEADERS
LibTree.h
)
set(SRCS
PrintingAlgorithms/PrintSpiral.cpp 
PrintingAlgorithms/Iterative_Preorder.cpp
PrintingAlgorithms/PrintLeaf2Root.cpp
PrintingAlgorithms/vertical_print.cpp
PrintingAlgorithms/PrintRoot2Leaf.cpp
PrintingAlgorithms/boundary_traversal.cpp
PrintingAlgorithms/print_Threaded.cpp
PrintingAlgorithms/Iterative_PostOrder.cpp
PrintingAlgorithms/Print_Ancestor.cpp
LibTree.cpp 
kdistance.cpp
Lcs_General.cpp
Lcs_bst.cpp
sum_tree.cpp
tree2dll.cpp
leaftorootmaxsum.cpp
Leaf2Leafmaxsum.cpp
k_distance_from_root.cpp
height_of_a_node.cpp
k_distance_from_leaf.cpp
check_mirror.cpp
diameter.cpp
make_Threaded_Recursion.cpp
Closest_Leaf.cpp
is_AVL_balanced.cpp
deepest_Leaf.cpp
root2leaf_particular_sum.cpp
diff_sum_alternate_level.cpp
)

add_library(LibTree SHARED
${SRCS}

${HEADERS}
)
